<resources>
    <string name="app_name">RollingpinBakery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Activity Titles
    <string name="title_activity_store">Store</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_cakes_category">Store - Cakes</string>
    <string name="title_activity_cookies_category">Store - Cookies</string>
    <string name="title_activity_pastries_category">Store - Pastries</string>
    <string name="title_activity_donut_category">Store - Donuts</string>
    <string name="title_activity_admin_main">Admin Home</string>
    <string name="title_activity_admin_products">Admin - View Products</string>
    <string name="title_activity_admin_product_edit">Edit Product</string>
    <string name="title_activity_admin_customer_edit">Edit Customer</string>
    <string name="title_activity_admin_reports">Reports</string>
    <string name="title_activity_admin_customers">Admin - View Customers</string>
    <string name="title_activity_locations">Store Locations</string>
    <string name="title_activity_st_cloud_current_weather">St. Cloud Current Weather</string>
    <string name="title_activity_san_francisco_current_weather">San Francisco Current Weather</string>
    <string name="title_activity_miami_current_weather">Miami Current Weather</string>


    <string name="action_settings">Settings</string>

    //Nav
    <string name="nav_Home">Home</string>
    <string name="nav_Store">Store</string>
    <string name="nav_Account">Account</string>

    //Login Form
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="password">Password:</string>
    <string name="user_name">User Name:</string>

    //Store - Category Page
    <string name="categories">Categories</string>
    <string name="cakes">Cakes</string>
    <string name="cookies">Cookies</string>
    <string name="pastries">Pastries</string>
    <string name="Donuts">Donuts</string>
    <string name="breads">Breads</string>

    //Individual Category pages
    <string name="cake_products">Cake Products</string>
    <string name="cookie_products">Cookie Products</string>
    <string name="pastry_products">Pastry Products</string>
    <string name="donut_products">Donut Products</string>
    <string name="bread_products">Bread Products</string>
    <string name="title_activity_breads_category">Store - Breads</string>
    <string name="register">Register</string>
    <string name="view">View</string>
    <string name="buy">Buy</string>

    //Filler Items
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="item5">Item5</string>
    <string name="item6">Item6</string>

    //Item details page
    <string name="item">Item</string>
    <string name="itemDetails">details to be filled in with DB data</string>

    //Admin Page
    <string name="edit_products">Edit Products</string>
    <string name="edit_customers">Edit Customers</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_product">Add a Product</string>
    <string name="edit_product">Edit a Product</string>
    <string name="edit_customer">Edit a Customer</string>
    <string name="add_customer">Add a Customer</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="sales_price">Sales Price</string>
    <string name="description">Description</string>
    <string name="product_category">Product Category</string>
    <string name="isFeatured">Is this product featured?</string>
    <string name="add">Add Product</string>
    <string name="update">Update Product</string>
    <string name="update_customer">Update Customer</string>
    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="username">Username</string>
    <string name="cust_password">Password</string>
    <string name="cust_re_password">Re-enter Password</string>
    <string name="email_address">Email Address</string>
    <string-array name="productTypes">
        <item>Cake</item>
        <item>Cookie</item>
        <item>Pastry</item>
        <item>Donut</item>
        <item>Bread</item>
    </string-array>
    <string-array name="customerRoles">
        <item>Customer</item>
        <item>Admin</item>
    </string-array>


    <string name="remove">Remove</string>
    <string name="backToReports">Back to Reports</string>
    <string name="subtract">Subtract Cart item</string>


    //Weather Pages
    <string name="location_header">View weather conditions for all of our different store locations</string>
    <string name="st_cloud">St. Cloud, Minnesota</string>
    <string name="san_francisco">San Francisco, California</string>
    <string name="miami">Miami, Florida</string>

    //Payment Info Page
    <string-array name="cardTypeSpinner">
        <item>MasterCard</item>
        <item>Visa</item>
        <item>American Express</item>
        <item>Discover</item>
    </string-array>

    <string-array name="expMonthSpinner">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="expYearSpinner">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>


    <string name="OCHeader">Order Summary</string>
    <string name="shipDetails">Shipping Details</string>
    <string name="payDetails">Payment Details</string>
    <string name="placeOrder">Place Order</string>

</resources>
