<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rollingpinbakery.rollingpinbakery.AdminProductEdit"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_product"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/ProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/ProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"/>

    <EditText
        android:id="@+id/ProductSalePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sales_price"/>

    <EditText
        android:id="@+id/ProductDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/ProductImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"/>
    <CheckBox
        android:id="@+id/IsFeaturedCkbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isFeatured"/>
    <Button
        android:id="@+id/AddProductBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:onClick="UpdateProduct"/>

</LinearLayout>
