<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rollingpinbakery.rollingpinbakery.AdminCustomerAdd"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_customer"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/CustomerFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/FName"/>

    <EditText
        android:id="@+id/CustomerLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LName"/>

    <EditText
        android:id="@+id/CustomerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/CustomerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/CustomerReenteredPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cust_re_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/CustomerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"/>

    <Button
        android:id="@+id/addCustomerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_customer"
        android:onClick="AddCustomer"/>

</LinearLayout>
