<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rollingpinbakery.rollingpinbakery.CakesCategory"
    tools:showIn="@layout/activity_cakes_category">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cake_products"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/Item1"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:onClick="NavItem"
            android:text="@string/item1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:drawableLeft="@mipmap/bread"
            />

        <Button
            android:id="@+id/Item2"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:onClick="NavItem"
            android:text="@string/item2"
            android:textAlignment="center"
            android:textSize="30sp"
            android:drawableLeft="@mipmap/bread"
            />

        <Button
            android:id="@+id/Item3"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:onClick="NavItem"
            android:text="@string/item3"
            android:textAlignment="center"
            android:textSize="30sp"
            android:drawableLeft="@mipmap/bread"
            />

        <Button
            android:id="@+id/Item4"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:onClick="NavItem"
            android:text="@string/item4"
            android:textAlignment="center"
            android:textSize="30sp"
            android:drawableLeft="@mipmap/bread"
            />

        <Button
            android:id="@+id/Item5"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:onClick="NavItem"
            android:text="@string/item5"
            android:textAlignment="center"
            android:textSize="30sp"
            android:drawableLeft="@mipmap/bread"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
